--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <div class="container-fluid">
-    <div ng-app="myApp" ng-strict-di>
+    <div ng-app="cheapFlight" ng-strict-di>
       <ui-view>
         Loading...
       </ui-view>
